--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "url-shortner",
+  "name": "lillurl",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+  "node": "16.x"
+}
   "keywords": [],
   "author": "",
   "license": "ISC",
