--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "lillurl",
-  "version": "1.0",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "16.x"  // ← This line was the problem (fixed by adding quotes)
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.4"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "description": "URL shortener application"
 }
