--- a/package.json
+++ b/package.json
@@ -52,157 +52,4 @@
     "end-of-stream": "^1.4.4",
     "env-paths": "^2.2.1",
     "err-code": "^2.0.3",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
-    "expand-template": "^2.0.3",
-    "express": "^5.1.0",
-    "file-uri-to-path": "^1.0.0",
-    "filelist": "^1.0.4",
-    "finalhandler": "^2.1.0",
-    "forwarded": "^0.2.0",
-    "fresh": "^2.0.0",
-    "fs-constants": "^1.0.0",
-    "fs-minipass": "^2.1.0",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.2",
-    "gauge": "^4.0.4",
-    "get-intrinsic": "^1.3.0",
-    "get-proto": "^1.0.1",
-    "github-from-package": "^0.0.0",
-    "glob": "^7.2.3",
-    "gopd": "^1.2.0",
-    "graceful-fs": "^4.2.11",
-    "has-flag": "^4.0.0",
-    "has-symbols": "^1.1.0",
-    "has-unicode": "^2.0.1",
-    "hasown": "^2.0.2",
-    "http-cache-semantics": "^4.1.1",
-    "http-errors": "^2.0.0",
-    "http-proxy-agent": "^4.0.1",
-    "https-proxy-agent": "^5.0.1",
-    "humanize-ms": "^1.2.1",
-    "iconv-lite": "^0.6.3",
-    "ieee754": "^1.2.1",
-    "imurmurhash": "^0.1.4",
-    "indent-string": "^4.0.0",
-    "infer-owner": "^1.0.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ini": "^1.3.8",
-    "ip-address": "^9.0.5",
-    "ipaddr.js": "^1.9.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-lambda": "^1.0.1",
-    "is-promise": "^4.0.0",
-    "isexe": "^2.0.0",
-    "jake": "^10.9.2",
-    "jsbn": "^1.1.0",
-    "lru-cache": "^6.0.0",
-    "make-fetch-happen": "^9.1.0",
-    "math-intrinsics": "^1.1.0",
-    "media-typer": "^1.1.0",
-    "merge-descriptors": "^2.0.0",
-    "mime-db": "^1.54.0",
-    "mime-types": "^3.0.1",
-    "mimic-response": "^3.1.0",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "minipass": "^3.3.6",
-    "minipass-collect": "^1.0.2",
-    "minipass-fetch": "^1.4.1",
-    "minipass-flush": "^1.0.5",
-    "minipass-pipeline": "^1.2.4",
-    "minipass-sized": "^1.0.3",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
-    "mkdirp-classic": "^0.5.3",
-    "ms": "^2.1.3",
-    "napi-build-utils": "^2.0.0",
-    "negotiator": "^1.0.0",
-    "node-abi": "^3.74.0",
-    "node-addon-api": "^7.1.1",
-    "node-gyp": "^8.4.1",
-    "nopt": "^5.0.0",
-    "npmlog": "^6.0.2",
-    "object-inspect": "^1.13.4",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "p-map": "^4.0.0",
-    "parseurl": "^1.3.3",
-    "path-is-absolute": "^1.0.1",
-    "path-to-regexp": "^8.2.0",
-    "prebuild-install": "^7.1.3",
-    "promise-inflight": "^1.0.1",
-    "promise-retry": "^2.0.1",
-    "proxy-addr": "^2.0.7",
-    "pump": "^3.0.2",
-    "qs": "^6.14.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^3.0.0",
-    "rc": "^1.2.8",
-    "readable-stream": "^3.6.2",
-    "retry": "^0.12.0",
-    "rimraf": "^3.0.2",
-    "router": "^2.2.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "semver": "^7.7.1",
-    "send": "^1.2.0",
-    "serve-static": "^2.2.0",
-    "set-blocking": "^2.0.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "side-channel-weakmap": "^1.0.2",
-    "signal-exit": "^3.0.7",
-    "simple-concat": "^1.0.1",
-    "simple-get": "^4.0.1",
-    "smart-buffer": "^4.2.0",
-    "socks": "^2.8.4",
-    "socks-proxy-agent": "^6.2.1",
-    "sprintf-js": "^1.1.3",
-    "sqlite3": "^5.1.7",
-    "ssri": "^8.0.1",
-    "statuses": "^2.0.1",
-    "string_decoder": "^1.3.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "strip-json-comments": "^2.0.1",
-    "supports-color": "^7.2.0",
-    "tar": "^6.2.1",
-    "tar-fs": "^2.1.2",
-    "tar-stream": "^2.2.0",
-    "toidentifier": "^1.0.1",
-    "tunnel-agent": "^0.6.0",
-    "type-is": "^2.0.1",
-    "unique-filename": "^1.1.1",
-    "unique-slug": "^2.0.2",
-    "unpipe": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "vary": "^1.1.2",
-    "which": "^2.0.2",
-    "wide-align": "^1.1.5",
-    "wrappy": "^1.0.2",
-    "yallist": "^4.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Srdr8008/lillurl.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Srdr8008/lillurl/issues"
-  },
-  "homepage": "https://github.com/Srdr8008/lillurl#readme"
-}
+    "es-define-property
