--- a/package.json
+++ b/package.json
@@ -1,55 +1,15 @@
 {
-  "name": "url-shortner",
+  "name": "url-shortener",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple URL Shortener",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "abbrev": "^1.1.1",
-    "accepts": "^2.0.0",
-    "agent-base": "^6.0.2",
-    "agentkeepalive": "^4.6.0",
-    "aggregate-error": "^3.1.0",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "aproba": "^2.0.0",
-    "are-we-there-yet": "^3.0.1",
-    "async": "^3.2.6",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "bindings": "^1.5.0",
-    "bl": "^4.1.0",
-    "body-parser": "^2.2.0",
-    "brace-expansion": "^1.1.11",
-    "buffer": "^5.7.1",
-    "bytes": "^3.1.2",
-    "cacache": "^15.3.0",
-    "call-bind-apply-helpers": "^1.0.2",
-    "call-bound": "^1.0.4",
-    "chalk": "^4.1.2",
-    "chownr": "^2.0.0",
-    "clean-stack": "^2.2.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "color-support": "^1.1.3",
-    "concat-map": "^0.0.1",
-    "console-control-strings": "^1.1.0",
-    "content-disposition": "^1.0.0",
-    "content-type": "^1.0.5",
-    "cookie": "^0.7.2",
-    "cookie-signature": "^1.2.2",
-    "debug": "^4.4.0",
-    "decompress-response": "^6.0.0",
-    "deep-extend": "^0.6.0",
-    "delegates": "^1.0.0",
-    "depd": "^2.0.0",
-    "detect-libc": "^2.0.3",
-    "dunder-proto": "^1.0.1",
-    "ee-first": "^1.1.1",
-    "ejs": "^3.1.10",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^2.0.0",
-    "encoding": "^0.1.13",
-    "end-of-stream": "^1.4.4",
-    "env-paths": "^2.2.1",
-    "err-code": "^2.0.3",
-    "es-define-property
+    "express": "^4.18.2",
+    "ejs": "^3.1.8",
+    "body-parser": "^1.20.2",
+    "sqlite3": "^5.1.6"
+  }
+}
